--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     header p { font-size: 1.2rem; margin-top: 0.5rem; }
     main { padding: 2rem 1rem; max-width: 900px; margin: auto; background: #fff; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
     section { margin-bottom: 2rem; }
-    h2 { color: #e63946; margin-top: 0; }
+    h2 { color: #e63946; margin-top: 0; position: relative; }
+    h2 a.anchor-link { text-decoration: none; color: #e63946; font-size: 1rem; margin-left: 8px; }
     a.button { display: inline-block; margin-top: 0.5rem; padding: 0.75rem 1.5rem; background: #457b9d; color: #fff; text-decoration: none; border-radius: 5px; }
     a.button:hover { background: #1d3557; }
     ul { padding-left: 1.2rem; }
@@ -28,13 +29,13 @@
 
   <main>
     <section id="about">
-      <h2>About</h2>
+      <h2>About <a class="anchor-link" href="#about">🔗</a></h2>
       <p><strong>Share 2 Archive.Today</strong> is a lightweight Android app that lets you preserve important web pages with just a single tap. Share any URL directly to Archive.Today from any app — articles, tweets, posts, videos — and ensure they're saved for future generations.</p>
       <p>No ads. No tracking. Just a clean, open-source tool to protect the public record.</p>
     </section>
 
     <section id="get-the-app">
-      <h2>Get the App</h2>
+      <h2>Get the App <a class="anchor-link" href="#get-the-app">🔗</a></h2>
       <p>
         <a href="https://play.google.com/store/apps/details?id=org.gnosco.share2archivetoday" class="button">Find on Android</a>
         <a href="https://apps.apple.com/us/app/share-2-archive-today/id6742428176" class="button">Find on Apple iOS</a>
@@ -42,7 +43,7 @@
     </section>
 
     <section id="tech-stack">
-      <h2>Tech Stack</h2>
+      <h2>Tech Stack <a class="anchor-link" href="#tech-stack">🔗</a></h2>
       <ul>
         <li>Kotlin DSL</li>
         <li>Android SDK 34 (UpsideDownCake)</li>
@@ -53,7 +54,7 @@
     </section>
 
     <section id="instructions">
-      <h2>How to Use</h2>
+      <h2>How to Use <a class="anchor-link" href="#instructions">🔗</a></h2>
       <ol>
         <li>Open any app or webpage (browser, Reddit, Twitter, etc.).</li>
         <li>Tap "Share" and choose <strong>Share 2 Archive.Today</strong>.</li>
@@ -63,7 +64,7 @@
     </section>
 
     <section id="projects">
-      <h2>Projects</h2>
+      <h2>Projects <a class="anchor-link" href="#projects">🔗</a></h2>
       <ul>
         <li><a href="https://github.com/gabefair/Share-2-Archive-Today/releases">Download APK</a> – Get the latest version directly from GitHub Releases.</li>
         <li><a href="https://github.com/gabefair/Share-2-Archive-Today/">View Source Code</a> – Check out the open-source codebase, file issues, or contribute improvements.</li>
@@ -71,12 +72,12 @@
     </section>
 
     <section id="privacy">
-      <h2>Privacy Policy</h2>
+      <h2>Privacy Policy <a class="anchor-link" href="#privacy">🔗</a></h2>
       <p>This app does not use, collect, or store any user data, or Personal Identifying Information (PII), or diagnostic data, or debugging data about you or your phone. Seriously, this app just adds a tool to your share menu to open the archived version of a URL.</p>
     </section>
 
     <section id="reviews">
-      <h2>Reviews</h2>
+      <h2>Reviews <a class="anchor-link" href="#reviews">🔗</a></h2>
       <blockquote>
         <strong>Matt Emmott:</strong> Almost indispensable at this point.
       </blockquote>
@@ -86,7 +87,7 @@
     </section>
 
     <section id="skills">
-      <h2>Features</h2>
+      <h2>Features <a class="anchor-link" href="#skills">🔗</a></h2>
       <ul>
         <li><strong>Instant Archiving:</strong> Share URLs from any app to instantly archive them.</li>
         <li><strong>Smart URL Cleaning:</strong> Automatically removes tracking parameters like <code>utm_source</code>, <code>fbclid</code>, and others.</li>
